# TW_TVM

./: .gitignore  Full_Work_Flow_v0.drawio  Full_Work_Flow_v1.drawio  find_a_kernel_faster_than_cublas  gemm.ipynb  gemm.py  github_token  grid_search.py  sensitivity_analysis.py  test_cutlass.py  test_lookUpTable.py  tile_matmul.ipynb  tw.py  tw_tvm.ipynb
AutoSchedule/: .gitignore  __init__.py  extern_func.py  tir_sparse_runner.py  tw_auto_scheduler.py
Benchmark/: CMakeLists.txt  cublas_dense.cu  cublas_sparse.cu
DataProcess/: fit_latency.py  plot_latency.py
Outputs/: search_log_2023-03-09-17_43_07  search_log_2023-03-09-20_30_41  search_log_2023-03-10-09_23_08  search_log_2023-03-10-10_10_39  search_log_2023-03-10-10_26_18
Pruning/: layer_pruner.py
SearchMethod/: grid_search.py
StreamMaskedGEMM/: CMakeLists.txt
tmp/: cutlass_tensorop_h16816gemm_128x128_32x3_tn_align8  cutlass_tensorop_h16816gemm_128x128_32x4_tn_align8  cutlass_tensorop_h16816gemm_128x128_32x5_tn_align8  cutlass_tensorop_h16816gemm_128x128_64x4_tn_align8  cutlass_tensorop_h16816gemm_128x256_32x3_tn_align8  cutlass_tensorop_h16816gemm_128x256_64x3_tn_align8  cutlass_tensorop_h16816gemm_128x64_32x6_tn_align8  cutlass_tensorop_h16816gemm_128x64_64x3_tn_align8  cutlass_tensorop_h16816gemm_256x128_32x3_tn_align8  cutlass_tensorop_h16816gemm_256x128_64x3_tn_align8  cutlass_tensorop_h16816gemm_256x64_32x4_tn_align8  cutlass_tensorop_h16816gemm_256x64_64x4_tn_align8  cutlass_tensorop_h16816gemm_64x128_32x6_tn_align8  cutlass_tensorop_h16816gemm_64x128_64x3_tn_align8  lib0.cu  tmp  (+11 more)
tries/: test.py  (+5 more)
(+149 files in other folders)
